Update dependency org.jacoco:jacoco-maven-plugin to v0.8.10 (release/4.0.x) (#6966)
* Update dependency org.jacoco:jacoco-maven-plugin to v0.8.10

* Introduce Afterburner workaround

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Steffen Nießing <zuniquex@protonmail.com>