@@ -13,6 +13,8 @@
     <name>Dropwizard Jackson Support</name>
 
     <properties>
+        <!-- https://github.com/FasterXML/jackson-modules-base/issues/37#issuecomment-389581245 -->
+        <argLine>${surefire.argLine} --illegal-access=deny --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
         <module.name>io.dropwizard.jackson</module.name>
     </properties>
 
